[gd_scene load_steps=6 format=2]

[ext_resource path="res://MannyTest/TeenyTinyFontSmall.tres" type="DynamicFont" id=1]
[ext_resource path="res://MannyTest/DialogueBoxBackground.tres" type="StyleBox" id=2]
[ext_resource path="res://MannyTest/DialogueBox.tres" type="Theme" id=3]
[ext_resource path="res://Actual/UI/Scripts/CharacterNode.gd" type="Script" id=4]
[ext_resource path="res://MannyTest/BGGrass.png" type="Texture" id=5]

[node name="CharacterNode" type="Panel"]
margin_right = 63.9999
margin_bottom = 88.0
theme = ExtResource( 3 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 4 )

[node name="CharName" type="Label" parent="."]
margin_left = 4.0
margin_right = 60.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "CharName"
align = 1
valign = 1

[node name="HP" type="Label" parent="."]
margin_left = 2.0
margin_top = 9.0
custom_fonts/font = ExtResource( 1 )
text = "HP"
align = 1
valign = 1

[node name="HPVal" type="Label" parent="."]
margin_left = 11.0
margin_top = 8.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "333333/999999"
align = 1
valign = 1

[node name="EPVal" type="Label" parent="."]
margin_left = 11.0
margin_top = 15.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "777777/777777"
align = 1
valign = 1

[node name="EP" type="Label" parent="."]
margin_left = 2.0
margin_top = 15.0
custom_fonts/font = ExtResource( 1 )
text = "EP"
align = 1
valign = 1

[node name="Condition" type="Label" parent="."]
margin_left = 12.0
margin_top = 20.0
margin_right = 52.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Conditions"
align = 1
valign = 1

[node name="StatsGrid" type="GridContainer" parent="."]
margin_left = 6.0
margin_top = 40.0
margin_right = 58.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 2

[node name="Attack" type="Label" parent="StatsGrid"]
margin_right = 20.0
margin_bottom = 6.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 10
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "ATT -"

[node name="ATT" type="Label" parent="StatsGrid"]
margin_left = 24.0
margin_right = 52.0
margin_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "XXXXXXX"

[node name="Defence" type="Label" parent="StatsGrid"]
margin_top = 11.0
margin_right = 20.0
margin_bottom = 17.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 10
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "DEF -"

[node name="DEF" type="Label" parent="StatsGrid"]
margin_left = 24.0
margin_top = 11.0
margin_right = 52.0
margin_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "XXXXXXX"

[node name="Power" type="Label" parent="StatsGrid"]
margin_top = 22.0
margin_right = 20.0
margin_bottom = 28.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 10
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "POW -"

[node name="POW" type="Label" parent="StatsGrid"]
margin_left = 24.0
margin_top = 22.0
margin_right = 52.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "XXXXXXX"

[node name="Speed" type="Label" parent="StatsGrid"]
margin_top = 33.0
margin_right = 20.0
margin_bottom = 39.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 10
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "SPD -"

[node name="SPD" type="Label" parent="StatsGrid"]
margin_left = 24.0
margin_top = 33.0
margin_right = 52.0
margin_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "XXXXXXX"

[node name="CharacterSprite" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 28.0
margin_right = 60.0
margin_bottom = 84.0
texture = ExtResource( 5 )
expand = true
